Fix click flicker

--- a/main/styles.css
+++ b/main/styles.css
@@ -66,6 +66,7 @@ h4 {
 .viewcanvas {
   display: block;
   z-index: 1;
+  -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
 
 .pullupmove, .pullupfixed {
@@ -113,3 +114,8 @@ input, select {
   text-decoration: none;
   font-size: 64px;
 }
+
+/* .choosecanvas {
+  display: block;
+  -webkit-tap-highlight-color:rgba(0,0,0,0);
+} */
